--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 
         <!-- Tabs -->
-        <section class="shock-section pt-5 pb-5">
+        <section class="shock-section pt-5">
           <div class="container">
             <div class="horizontal-tab mb-3 scheme-1 primary">
               <!-- Tab navigation -->
@@ -199,66 +199,11 @@
                 </div>
               </div>
             </div>
-            <!-- Cards -->
-            <div class="row g-2">
-              <div class="col-12 col-md-6 col-lg-3" data-aos="zoom-in-up" data-aos-delay="200">
-                <div class="card hover-up">
-                  <div class="card-body small-shadow rounded-3 bg-color white">
-                    <div class="title align-v-center text-style-11 black">
-                      <i class="fa-brands fa-instagram icon"></i>
-                      <span class="text ms-05">Social Network</span>
-                    </div>
-                    <p class="description">This is a example of a summary description for this item.</p>
-                    <!-- Link -->
-                    <a href="#your-link" class="full-link"></a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-12 col-md-6 col-lg-3" data-aos="zoom-in-up" data-aos-delay="400">
-                <div class="card hover-up">
-                  <div class="card-body small-shadow rounded-3 bg-color white">
-                    <div class="title align-v-center text-style-11 black">
-                      <i class="fa-regular fa-pen-to-square"></i>
-                      <span class="text ms-05">Content Creation</span>
-                    </div>
-                    <p class="description">This is a example of a summary description for this item.</p>
-                    <!-- Link -->
-                    <a href="#your-link" class="full-link"></a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-12 col-md-6 col-lg-3" data-aos="zoom-in-up" data-aos-delay="600">
-                <div class="card hover-up">
-                  <div class="card-body small-shadow rounded-3 bg-color white">
-                    <div class="title align-v-center text-style-11 black">
-                      <i class="fa-regular fa-comments icon"></i>
-                      <span class="text ms-05">Client Relationship</span>
-                    </div>
-                    <p class="description">This is a example of a summary description for this item.</p>
-                    <!-- Link -->
-                    <a href="#your-link" class="full-link"></a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-12 col-md-6 col-lg-3" data-aos="zoom-in-up" data-aos-delay="800">
-                <div class="card hover-up">
-                  <div class="card-body small-shadow rounded-3 bg-color white">
-                    <div class="title align-v-center text-style-11 black">
-                      <i class="fa-regular fa-envelope icon"></i>
-                      <span class="text ms-05">Email Marketing</span>
-                    </div>
-                    <p class="description">This is a example of a summary description for this item.</p>
-                    <!-- Link -->
-                    <a href="#your-link" class="full-link"></a>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
         </section>
 
       <!-- Banner -->
-      <section class="shock-section has-holder pt-4">
+      <section class="shock-section has-holder">
         <div class="container max-w-75">
           <!-- Intro -->
           <div class="basic-intro text-center">
@@ -742,6 +687,139 @@
         </div>
       </div>
     </div>
+
+    <!-- Main -->
+    <main id="main" class="shock-main bg-color black">
+
+      <!-- Banner -->
+      <section class="shock-section bg-image bg-only-desktop size-50 bg-fixed position-x-right" data-bg-image="assets/images/jpg/c-38.jpg">
+        <div class="container-fluid">
+          <div class="half-section me-auto align-v-center">
+            <!-- Label -->
+            <span class="label-vertical to-top-right opacity-75">
+              <span class="label-line gray"></span>
+              <span class="label-text gray"> SINCE 1986</span>
+            </span>
+            <!-- Label -->
+            <span class="label-vertical to-bottom-right opacity-75">
+              <span class="label-line gray"></span>
+              <span class="label-text gray">MARKET REFERENCE</span>
+            </span>
+            <!-- Intro -->
+            <div class="side-intro">
+              <h1 class="title">
+                <span class="text-1 text-style-2 text-outline gray">Let's talk?</span>
+                <span class="text-2 text-style-5 text-italic white">+1 (99) <mark class="animated-underline secondary typed-text"></mark></span>      
+              </h1>
+              <!-- Srings -->
+              <div id="typed-strings">
+                <span>1234 5678</span>
+                <span>8765 4321</span>
+                <span>5678 1234</span>
+              </div>   
+              <div class="description gray">
+                <p>Please contact us for more information about our services.<br> It will be a pleasure to find out how we can help.</p>
+              </div>
+              <!-- Button -->
+              <a href="#modal" class="button outline gray secondary-hover" data-bs-toggle="modal" data-bs-target="#modal">
+                <span class="hover-rotate">
+                  <span class="button-text white white-hover">Get Started</span>
+                  <i class="fa-solid fa-arrow-right button-icon white white-hover"></i>
+                </span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    </main>
+
+    <!-- Modal -->
+    <div id="modal" class="modal fade" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog max-w-50">
+        <div class="modal-content shadow rounded" data-bg-color="#201f25">
+          <div class="modal-header">
+            <i class="fa-solid fa-xmark close-button white secondary-hover" data-bs-dismiss="modal" aria-label="Close"></i>
+            <!-- Intro -->
+            <div class="basic-intro">
+              <h2 class="title text-style-5">
+                <span class="text-1 text-outline gray">How can </span>
+                <span class="text-2 text-italic white">we <mark class="animated-underline secondary">help you</mark>?</span>
+              </h2>
+              <div class="description gray">
+                <p>Please fill in the form below and we will get back to you shortly. 🥳</p>
+              </div>
+            </div>
+          </div>
+          <div class="modal-body">
+            <!-- Form -->
+            <div class="form-area scheme-2 secondary">
+              <form action="php/sender.php" class="form-fields needs-validation ajax-form" novalidate="novalidate">
+                <div class="form-row row">
+                  <div class="form-col form-floating col-12 col-md-6">
+                    <input type="text" name="name" id="InputFloatingName" class="form-control" placeholder="Name" required="required">
+                    <label for="InputFloatingName" class="form-label">Name</label>
+                    <div class="invalid-feedback">Please enter your name.</div>
+                    <div class="valid-feedback">Looks good.</div>
+                  </div>
+                  <div class="form-col form-floating col-12 col-md-6">
+                    <input type="email" name="email" id="InputFloatingEmail" class="form-control" placeholder="name@example.com" required="required">
+                    <label for="InputFloatingEmail" class="form-label">Email</label>
+                    <div class="invalid-feedback">Please enter a valid email address.</div>
+                    <div class="valid-feedback">Looks good.</div>
+                  </div>
+                </div>
+                <div class="form-row row">
+                  <div class="form-col form-floating col-12">
+                    <textarea name="message" id="InputFloatingMessage" class="form-control form-textarea" rows="3" placeholder="Enter your message (optional)."></textarea>
+                    <label for="InputFloatingMessage" class="form-label">Message</label>
+                    <div class="valid-feedback">It's optional, but we'd like to know about it :)</div>
+                  </div>
+                </div>
+                <div class="form-row row">
+                  <div class="form-col col-12 col-md-8">
+                    <div class="form-check form-switch">
+                      <input type="checkbox" name="info-1" id="InputSwitchChecked" class="form-check-input form-switch" value="I want to receive news from this site by email." checked="checked">
+                      <label class="form-label form-check-label" for="InputSwitchChecked">
+                        I want to receive news from this site by email.
+                      </label>
+                    </div>
+                    <div class="form-check form-switch">
+                      <input type="checkbox" name="info-2" id="InputSwitch" class="form-check-input form-switch" value="I want to receive news from this site by sms.">
+                      <label class="form-label form-check-label" for="InputSwitch">
+                        I want to receive news from this site by sms.
+                      </label>
+                    </div>
+                  </div>
+                  <div class="form-col col-12 col-md-4 align-h-right">
+                    <!-- Button -->
+                    <button class="button outline gray secondary-hover magnetic-effect">
+                      <span class="button-text white white-hover">Send</span>
+                      <i class="fa-solid fa-arrow-right button-icon white white-hover"></i>
+                    </button>
+                  </div>
+                </div>
+                <input type="hidden" name="subject" value="Message sent through the contact form.">
+                <span class="form-alert success">Your message was sent successful. Thanks.</span>
+                <span class="form-alert error">Sorry. We were unable to send your message.</span>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <!-- Cursor -->
+    <svg class="cursor-effect secondary" width="220" height="220" viewBox="0 0 220 220">
+      <defs>
+        <filter id="cursor-effect-filter" x="-50%" y="-50%" width="200%" height="200%" filterUnits="objectBoundingBox">
+          <feTurbulence type="fractalNoise" baseFrequency="0" numOctaves="1" result="warp"></feTurbulence>
+          <feOffset dx="-30" result="warpOffset"></feOffset>
+          <feDisplacementMap xChannelSelector="R" yChannelSelector="G" scale="20" in="SourceGraphic" in2="warpOffset"></feDisplacementMap>
+        </filter>
+      </defs>
+      <circle class="cursor-effect-inner" cx="110" cy="110" r="20"></circle>
+    </svg>
 
     <!-- Footer -->
     <footer id="footer" class="shock-footer scheme-1 primary">
