--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
               </li>
               <li class="nav-item dropdown has-megamenu hover">
                 <a class="nav-link dropdown-toggle has-icon" href="#" data-bs-toggle="dropdown">
-                  <span class="text nav-title">Institutional</span>
-                </a>
-              </li>
-              <li class="nav-item dropdown has-megamenu hover">
-                <a class="nav-link dropdown-toggle has-icon" href="#" data-bs-toggle="dropdown">
-                  <span class="text nav-title">Sectors</span>
+                  <span class="text nav-title">About</span>
                 </a>
               </li>
               <li class="nav-item dropdown has-megamenu hover">
                 <a class="nav-link dropdown-toggle has-icon" href="#" data-bs-toggle="dropdown">
                   <span class="text nav-title">Group Companies</span>
+                </a>
+              </li>
+              <li class="nav-item dropdown has-megamenu hover">
+                <a class="nav-link dropdown-toggle has-icon" href="#" data-bs-toggle="dropdown">
+                  <span class="text nav-title">Sectors</span>
                 </a>
               </li>
               <li class="nav-item dropdown has-megamenu hover">
@@ -478,6 +478,7 @@
                         <img src="./assets/images/faaliyyet/helmet.png" class="image p-1 fit-cover" alt="This is an example description for this item." />
                       </div>
                     </a>
+                    <h5 style="text-align: center; padding-top: 1rem;">İNŞAAT</h5>
                   </div>
                   <div class="col-4">
                     <a class="item lightbox-link hover-opacity">
@@ -486,6 +487,7 @@
                         <img src="./assets/images/faaliyyet/energy.png" class="image p-1 fit-cover" alt="This is an example description for this item." />
                       </div>
                     </a>
+                    <h5 style="text-align: center; padding-top: 1rem;">ENERJİ</h5>
                   </div>
                   <div class="col-4">
                     <a class="item lightbox-link hover-opacity">
@@ -494,6 +496,7 @@
                         <img src="./assets/images/faaliyyet/seracilik.svg" class="image p-1 fit-cover" alt="This is an example description for this item." />
                       </div>
                     </a>
+                    <h5 style="text-align: center; padding-top: 1rem;">SERACILIK</h5>
                   </div>
                   <div class="col-4">
                     <a class="item lightbox-link hover-opacity">
@@ -502,6 +505,7 @@
                         <img src="./assets/images/faaliyyet/cow.svg" class="image p-1 fit-cover" alt="This is an example description for this item." />
                       </div>
                     </a>
+                    <h5 style="text-align: center; padding-top: 1rem;">HAYVANCILIK</h5>
                   </div>
                   <div class="col-4">
                     <a class="item lightbox-link hover-opacity">
@@ -510,6 +514,7 @@
                         <img src="./assets/images/faaliyyet/sigortacilik.svg" class="image p-1 fit-cover" alt="This is an example description for this item." />
                       </div>
                     </a>
+                    <h5 style="text-align: center; padding-top: 1rem;">SİGORTACILIK</h5>
                   </div>
                   <div class="col-4">
                     <a class="item lightbox-link hover-opacity">
@@ -518,30 +523,34 @@
                         <img src="./assets/images/faaliyyet/petrol.svg" class="image p-1 fit-cover" alt="This is an example description for this item." />
                       </div>
                     </a>
+                    <h5 style="text-align: center; padding-top: 1rem;">AKARYAKIT DAĞITIM</h5>
                   </div>
                   <div class="col-4">
                     <a class="item lightbox-link hover-opacity">
                       <div class="image-wrapper floating-item">
-                        <div class="overlay has-border bottom-item border-end-0 gray"></div>
+                        <div class="overlay has-border top-item left-item gray"></div>
                         <img src="./assets/images/faaliyyet/hizmet.svg" class="image p-1 fit-cover" alt="This is an example description for this item." />
                       </div>
                     </a>
+                    <h5 style="text-align: center; padding-top: 1rem;">HİZMET</h5>
                   </div>
                   <div class="col-4">
                     <a class="item lightbox-link hover-opacity">
                       <div class="image-wrapper floating-item">
-                        <div class="overlay has-border bottom-item border-end-0 gray"></div>
+                        <div class="overlay has-border bottom-item gray"></div>
                         <img src="./assets/images/faaliyyet/tarim.svg" class="image p-1 fit-cover" alt="This is an example description for this item." />
                       </div>
                     </a>
+                    <h5 style="text-align: center; padding-top: 1rem;">TARIM</h5>
                   </div>
                   <div class="col-4">
                     <a class="item lightbox-link hover-opacity">
                       <div class="image-wrapper floating-item">
-                        <div class="overlay has-border bottom-item border-end-0 gray"></div>
+                        <div class="overlay has-border top-item border-end-0 gray"></div>
                         <img src="./assets/images/faaliyyet/bilisim.svg" class="image p-1 fit-cover" alt="This is an example description for this item." />
                       </div>
                     </a>
+                    <h5 style="text-align: center; padding-top: 1rem;">BİLİŞİM</h5>
                   </div>
                 </div>
               </div>
@@ -709,13 +718,13 @@
             <div class="side-intro">
               <h1 class="title">
                 <span class="text-1 text-style-2 text-outline gray">Let's talk?</span>
-                <span class="text-2 text-style-5 text-italic white">+1 (99) <mark class="animated-underline secondary typed-text"></mark></span>      
+                <span class="text-2 text-style-5 text-italic white">+90 (312) <mark class="animated-underline secondary typed-text"></mark></span>      
               </h1>
               <!-- Srings -->
               <div id="typed-strings">
-                <span>1234 5678</span>
-                <span>8765 4321</span>
-                <span>5678 1234</span>
+                <span>229 08 08</span>
+                <span>229 08 08</span>
+                <span>229 08 08</span>
               </div>   
               <div class="description gray">
                 <p>Please contact us for more information about our services.<br> It will be a pleasure to find out how we can help.</p>
@@ -844,9 +853,9 @@
                 <!-- Links list -->
                 <ul class="nav-list list-unstyled">
                   <li class="nav-item">
-                    <a href="tel:+19912345678" class="nav-link has-icon">
+                    <a href="tel:+903122290808" class="nav-link has-icon">
                       <img class="image-icon" src="assets/svg/call-sharp.svg" alt="Icon name" data-shock-icon="32" />  
-                      <span class="text">+1 (99) 1234 5678</span>
+                      <span class="text">+90 (312) 229 08 08</span>
                       <span class="badge flex ms-1 primary primary-hover">
                         <span class="badge-text white white-hover">Mon-Fri</span>
                       </span>
@@ -909,7 +918,7 @@
         </div>
       </div>
       <div class="bottom-bar">
-        <div class="text">© 2023 - All rights reserved. The <a href="https://codings.dev?redirect=shock-html" class="link gray primary-hover"><u>Shock Theme</u></a> is developed and maintained by <a href="https://codings.dev?ref=shock-html" class="link gray primary-hover"><u>Codings Group</u></a>.</div>
+        <div class="text">Copyright © 2023 <a href="https://www.butagrup.com.tr/?lang=en" class="link gray primary-hover">Buta Grup</a>  All Rights Reserved.</div>
       </div>
     </footer>
     
