--- a/index.html
+++ b/index.html
@@ -840,34 +840,12 @@
                 <!-- Brand -->
                 <a href="/" class="footer-brand floating-item">
                   <!-- <div class="site-title">Site Title</div> -->
-                  <img src="assets/images/logo-white.svg" alt="Shock Theme" class="logo" />
-                  <span class="logo-after-text">SHOCK</span>
+                  <img src="./assets/images/senbay_logo.svg" alt="Shock Theme" class="logo" />
                 </a>
                 <!-- Text -->
                 <div class="footer-text">
-                  <p>Shock is a creative multipurpose theme for building websites powered by Bootstrap 5 and other libraries.</p>
+                  <p>Shenbay Holding has been successfully operating for half a century in the fields of fuel supply, insurance and brokerage services, greenhouse cultivation, renewable energy production, mining, animal husbandry, food production and sales in the energy, production and service sectors, mainly the construction sector.</p>
                 </div>
-              </div>
-              <div class="footer-item">
-                <h6 class="title">Contact Us</h6>
-                <!-- Links list -->
-                <ul class="nav-list list-unstyled">
-                  <li class="nav-item">
-                    <a href="tel:+903122290808" class="nav-link has-icon">
-                      <img class="image-icon" src="assets/svg/call-sharp.svg" alt="Icon name" data-shock-icon="32" />  
-                      <span class="text">+90 (312) 229 08 08</span>
-                      <span class="badge flex ms-1 primary primary-hover">
-                        <span class="badge-text white white-hover">Mon-Fri</span>
-                      </span>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="mailto:contact@mail.com" class="nav-link has-icon">
-                      <img class="image-icon" src="assets/svg/mail-sharp.svg" alt="Icon name" data-shock-icon="32" />  
-                      <span class="text">contact@mail.com</span>
-                    </a>
-                  </li>
-                </ul>
               </div>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
@@ -912,6 +890,29 @@
                     <i class="fa-solid fa-arrow-right button-icon white white-hover"></i>
                   </span>
                 </a>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+              <div class="footer-item">
+                <h6 class="title">Contact Us</h6>
+                <!-- Links list -->
+                <ul class="nav-list list-unstyled">
+                  <li class="nav-item">
+                    <a href="tel:+903122290808" class="nav-link has-icon">
+                      <img class="image-icon" src="assets/svg/call-sharp.svg" alt="Icon name" data-shock-icon="32" />  
+                      <span class="text">+90 (312) 229 08 08</span>
+                      <span class="badge flex ms-1 primary primary-hover">
+                        <span class="badge-text white white-hover">Mon-Fri</span>
+                      </span>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="mailto:contact@mail.com" class="nav-link has-icon">
+                      <img class="image-icon" src="assets/svg/mail-sharp.svg" alt="Icon name" data-shock-icon="32" />  
+                      <span class="text">contact@mail.com</span>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
