--- a/index.html
+++ b/index.html
@@ -474,71 +474,71 @@
                   <div class="col-4">
                     <a class="item lightbox-link hover-opacity">
                       <div class="image-wrapper floating-item">
-                        <div class="overlay has-border top-item left-item gray"></div>
-                        <img src="./assets/images/faaliyyet/helmet.png" class="image p-1 fit-cover" alt="This is an example description for this item." />
+                        <div class="overlay has-border top-item left-item gray gallery-width"></div>
+                        <img src="./assets/images/faaliyyet/helmet.png" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 style="text-align: center; padding-top: 1rem;">İNŞAAT</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">İNŞAAT</h5>
                   </div>
                   <div class="col-4">
                     <a class="item lightbox-link hover-opacity">
                       <div class="image-wrapper floating-item">
-                        <div class="overlay has-border top-item gray"></div>
-                        <img src="./assets/images/faaliyyet/energy.png" class="image p-1 fit-cover" alt="This is an example description for this item." />
+                        <div class="overlay has-border top-item gray gallery-width"></div>
+                        <img src="./assets/images/faaliyyet/energy.png" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 style="text-align: center; padding-top: 1rem;">ENERJİ</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">ENERJİ</h5>
                   </div>
                   <div class="col-4">
                     <a class="item lightbox-link hover-opacity">
                       <div class="image-wrapper floating-item">
-                        <div class="overlay has-border top-item border-end-0 gray"></div>
-                        <img src="./assets/images/faaliyyet/seracilik.svg" class="image p-1 fit-cover" alt="This is an example description for this item." />
+                        <div class="overlay has-border top-item border-end-0 gray gallery-width"></div>
+                        <img src="./assets/images/faaliyyet/seracilik.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 style="text-align: center; padding-top: 1rem;">SERACILIK</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">SERACILIK</h5>
                   </div>
                   <div class="col-4">
                     <a class="item lightbox-link hover-opacity">
                       <div class="image-wrapper floating-item">
-                        <div class="overlay has-border bottom-item left-item gray"></div>
-                        <img src="./assets/images/faaliyyet/cow.svg" class="image p-1 fit-cover" alt="This is an example description for this item." />
+                        <div class="overlay has-border bottom-item left-item gray gallery-width"></div>
+                        <img src="./assets/images/faaliyyet/cow.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 style="text-align: center; padding-top: 1rem;">HAYVANCILIK</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">HAYVANCILIK</h5>
                   </div>
                   <div class="col-4">
                     <a class="item lightbox-link hover-opacity">
                       <div class="image-wrapper floating-item">
-                        <div class="overlay has-border bottom-item gray"></div>
-                        <img src="./assets/images/faaliyyet/sigortacilik.svg" class="image p-1 fit-cover" alt="This is an example description for this item." />
+                        <div class="overlay has-border bottom-item gray gallery-width"></div>
+                        <img src="./assets/images/faaliyyet/sigortacilik.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 style="text-align: center; padding-top: 1rem;">SİGORTACILIK</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">SİGORTACILIK</h5>
                   </div>
                   <div class="col-4">
                     <a class="item lightbox-link hover-opacity">
                       <div class="image-wrapper floating-item">
-                        <div class="overlay has-border bottom-item border-end-0 gray"></div>
-                        <img src="./assets/images/faaliyyet/petrol.svg" class="image p-1 fit-cover" alt="This is an example description for this item." />
+                        <div class="overlay has-border bottom-item border-end-0 gray gallery-width"></div>
+                        <img src="./assets/images/faaliyyet/petrol.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 style="text-align: center; padding-top: 1rem;">AKARYAKIT DAĞITIM</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">AKARYAKIT DAĞITIM</h5>
                   </div>
                   <div class="col-4">
                     <a class="item lightbox-link hover-opacity">
                       <div class="image-wrapper floating-item">
-                        <div class="overlay has-border top-item left-item gray"></div>
-                        <img src="./assets/images/faaliyyet/hizmet.svg" class="image p-1 fit-cover" alt="This is an example description for this item." />
+                        <div class="overlay has-border top-item left-item gray gallery-width"></div>
+                        <img src="./assets/images/faaliyyet/hizmet.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 style="text-align: center; padding-top: 1rem;">HİZMET</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">HİZMET</h5>
                   </div>
                   <div class="col-4">
                     <a class="item lightbox-link hover-opacity">
                       <div class="image-wrapper floating-item">
-                        <div class="overlay has-border bottom-item gray"></div>
-                        <img src="./assets/images/faaliyyet/tarim.svg" class="image p-1 fit-cover" alt="This is an example description for this item." />
+                        <div class="overlay has-border bottom-item gray gallery-width"></div>
+                        <img src="./assets/images/faaliyyet/tarim.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
                     <h5 style="text-align: center; padding-top: 1rem;">TARIM</h5>
@@ -546,11 +546,11 @@
                   <div class="col-4">
                     <a class="item lightbox-link hover-opacity">
                       <div class="image-wrapper floating-item">
-                        <div class="overlay has-border top-item border-end-0 gray"></div>
-                        <img src="./assets/images/faaliyyet/bilisim.svg" class="image p-1 fit-cover" alt="This is an example description for this item." />
+                        <div class="overlay has-border top-item border-end-0 gray gallery-width"></div>
+                        <img src="./assets/images/faaliyyet/bilisim.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 style="text-align: center; padding-top: 1rem;">BİLİŞİM</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">BİLİŞİM</h5>
                   </div>
                 </div>
               </div>
@@ -560,22 +560,13 @@
                 <!-- Intro -->
                 <div class="basic-intro">
                   <h2 class="title text-style-5">
-                    <span class="text-2 text-style-3 text-italic text-gradient scheme-1">Trusted brands.</span>
+                    <span class="text-2 text-style-3 text-italic text-gradient scheme-1">Trusted brands SENBAY HOLDING</span>
                   </h2>
                   <div class="description gray">
-                    <p>We use the best technologies available on the market to ensure that our customers obtain positive results.</p>
+                    <p>We use the best technologies available on the market to ensure that our customers obtain positive results. -- During 50 years left behind, with the target of become one of the world’s leading brand companies, we are shaping the industries.</p>
                   </div>
                 </div>
                 <hr class="gray-25">
-                <figure class="blockquote">
-                  <blockquote class="blockquote-body text-style-11 gray">
-                    <p>"Senbay Holding"</p>
-                  </blockquote>
-                  <div class="description gray">
-                    <p>During 50 years left behind, with the target of become one of the world’s leading brand
-                      companies, we are shaping the industries..</p>
-                  </div>
-                </figure>
               </div>
             </div>
           </div>
