--- a/index.html
+++ b/index.html
@@ -911,28 +911,21 @@
                 <ul class="nav-list list-unstyled">
                   <li class="nav-item">
                     <a href="#your-link" class="nav-link has-icon">
-                      <img class="image-icon" src="assets/svg/chevron-forward-sharp.svg" alt="Icon name" data-shock-icon="32" />  
                       <span class="text">Who We Are</span>
                     </a>
                   </li>
                   <li class="nav-item">
                     <a href="#your-link" class="nav-link has-icon">
-                      <img class="image-icon" src="assets/svg/chevron-forward-sharp.svg" alt="Icon name" data-shock-icon="32" />  
                       <span class="text">Social Projects</span>
-                      <span class="badge flex ms-1 primary primary-hover">
-                        <span class="badge-text white white-hover">New</span>
-                      </span>
                     </a>
                   </li>
                   <li class="nav-item">
                     <a href="#your-link" class="nav-link has-icon">
-                      <img class="image-icon" src="assets/svg/chevron-forward-sharp.svg" alt="Icon name" data-shock-icon="32" />  
                       <span class="text">Our Services</span>
                     </a>
                   </li>
                   <li class="nav-item">
                     <a href="#your-link" class="nav-link has-icon">
-                      <img class="image-icon" src="assets/svg/chevron-forward-sharp.svg" alt="Icon name" data-shock-icon="32" />  
                       <span class="text">Privacy Police</span>
                     </a>
                   </li>
@@ -955,17 +948,12 @@
                 <ul class="nav-list list-unstyled">
                   <li class="nav-item">
                     <a href="tel:+903122290808" class="nav-link has-icon">
-                      <img class="image-icon" src="assets/svg/call-sharp.svg" alt="Icon name" data-shock-icon="32" />  
                       <span class="text">+90 (312) 229 08 08</span>
-                      <span class="badge flex ms-1 primary primary-hover">
-                        <span class="badge-text white white-hover">Mon-Fri</span>
-                      </span>
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="mailto:contact@mail.com" class="nav-link has-icon">
-                      <img class="image-icon" src="assets/svg/mail-sharp.svg" alt="Icon name" data-shock-icon="32" />  
-                      <span class="text">contact@mail.com</span>
+                    <a href="mailto:İNFO@BAYBURTGRUP.COM.TR" class="nav-link has-icon"> 
+                      <span class="text">İNFO@BAYBURTGRUP.COM.TR</span>
                     </a>
                   </li>
                 </ul>
