solving checklist problem

--- a/index.html
+++ b/index.html
@@ -147,22 +147,22 @@
             <div class="horizontal-tab mb-3 scheme-1 primary">
               <!-- Tab navigation -->
               <ul id="h-tab" class="nav nav-tabs" role="tablist" aria-orientation="horizontal">
-                <li class="nav-item" role="presentation">
+                <li class="nav-item mobile-about--item" role="presentation">
                   <button id="h-1-tab" class="nav-link active" aria-selected="true" aria-controls="h-1" data-bs-target="#h-1" data-bs-toggle="tab" role="tab">
                     About Us
                   </button>
                 </li>
-                <li class="nav-item" role="presentation">
+                <li class="nav-item mobile-about--item" role="presentation">
                   <button id="h-2-tab" class="nav-link" aria-selected="false" aria-controls="h-2" data-bs-target="#h-2" data-bs-toggle="tab" role="tab">
                     Mission
                   </button>
                 </li>
-                <li class="nav-item" role="presentation">
+                <li class="nav-item mobile-about--item" role="presentation">
                   <button id="h-3-tab" class="nav-link" aria-selected="false" aria-controls="h-3" data-bs-target="#h-3" data-bs-toggle="tab" role="tab">
                     Vision
                   </button>
                 </li>
-                <li class="nav-item" role="presentation">
+                <li class="nav-item mobile-about--item" role="presentation">
                   <button id="h-4-tab" class="nav-link" aria-selected="false" aria-controls="h-3" data-bs-target="#h-4" data-bs-toggle="tab" role="tab">
                     Values
                   </button>
@@ -527,8 +527,21 @@
         </div>
       </section>
 
+      <!-- Banner -->
+      <section class="shock-section has-holder" id="sectors">
+        <div class="container max-w-75">
+          <!-- Intro -->
+          <div class="basic-intro text-center">
+            <h1 class="title">
+              <!-- <span class="text-1 d-block text-style-2 text-outline text-gradient scheme-1">We provide</span> -->
+              <span class="text-2 d-block text-style-2 text-italic text-gradient scheme-1">Sectors</span>
+            </h1>
+          </div>
+        </div>
+      </section>
+
       <!-- Gallery -->
-      <section class="shock-section pt-4 pb-4" id="sectors">
+      <section class="shock-section pt-4 pb-4">
         <div class="container">
           <div class="row g-4">
             <div class="col-12 col-md-6">
@@ -536,7 +549,7 @@
               <div class="gallery">
                 <div class="row g-1">
                   <div class="col-4">
-                    <a class="item lightbox-link hover-opacity">
+                    <a class="item hover-opacity">
                       <div class="image-wrapper floating-item">
                         <div class="overlay has-border top-item left-item gray gallery-width"></div>
                         <img src="./assets/images/faaliyyet/helmet.png" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
@@ -545,7 +558,7 @@
                     <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">İNŞAAT</h5>
                   </div>
                   <div class="col-4">
-                    <a class="item lightbox-link hover-opacity">
+                    <a class="item hover-opacity">
                       <div class="image-wrapper floating-item">
                         <div class="overlay has-border top-item gray gallery-width"></div>
                         <img src="./assets/images/faaliyyet/energy.png" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
@@ -554,7 +567,7 @@
                     <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">ENERJİ</h5>
                   </div>
                   <div class="col-4">
-                    <a class="item lightbox-link hover-opacity">
+                    <a class="item hover-opacity">
                       <div class="image-wrapper floating-item">
                         <div class="overlay has-border top-item border-end-0 gray gallery-width"></div>
                         <img src="./assets/images/faaliyyet/seracilik.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
@@ -563,7 +576,7 @@
                     <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">SERACILIK</h5>
                   </div>
                   <div class="col-4">
-                    <a class="item lightbox-link hover-opacity">
+                    <a class="item hover-opacity">
                       <div class="image-wrapper floating-item">
                         <div class="overlay has-border bottom-item left-item gray gallery-width"></div>
                         <img src="./assets/images/faaliyyet/cow.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
@@ -572,7 +585,7 @@
                     <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">HAYVANCILIK</h5>
                   </div>
                   <div class="col-4">
-                    <a class="item lightbox-link hover-opacity">
+                    <a class="item hover-opacity">
                       <div class="image-wrapper floating-item">
                         <div class="overlay has-border bottom-item gray gallery-width"></div>
                         <img src="./assets/images/faaliyyet/sigortacilik.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
@@ -581,7 +594,7 @@
                     <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">SİGORTACILIK</h5>
                   </div>
                   <div class="col-4">
-                    <a class="item lightbox-link hover-opacity">
+                    <a class="item hover-opacity">
                       <div class="image-wrapper floating-item">
                         <div class="overlay has-border bottom-item border-end-0 gray gallery-width"></div>
                         <img src="./assets/images/faaliyyet/petrol.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
@@ -590,7 +603,7 @@
                     <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">AKARYAKIT DAĞITIM</h5>
                   </div>
                   <div class="col-4">
-                    <a class="item lightbox-link hover-opacity">
+                    <a class="item hover-opacity">
                       <div class="image-wrapper floating-item">
                         <div class="overlay has-border top-item left-item gray gallery-width"></div>
                         <img src="./assets/images/faaliyyet/hizmet.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
@@ -599,16 +612,16 @@
                     <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">HİZMET</h5>
                   </div>
                   <div class="col-4">
-                    <a class="item lightbox-link hover-opacity">
+                    <a class="item hover-opacity">
                       <div class="image-wrapper floating-item">
                         <div class="overlay has-border bottom-item gray gallery-width"></div>
                         <img src="./assets/images/faaliyyet/tarim.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 style="text-align: center; padding-top: 1rem;">TARIM</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">TARIM</h5>
                   </div>
                   <div class="col-4">
-                    <a class="item lightbox-link hover-opacity">
+                    <a class="item hover-opacity">
                       <div class="image-wrapper floating-item">
                         <div class="overlay has-border top-item border-end-0 gray gallery-width"></div>
                         <img src="./assets/images/faaliyyet/bilisim.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
@@ -774,7 +787,7 @@
               <h1 class="title">
                 <span class="text-1 text-style-2 text-outline gray">Contact</span>
                 <span class="text-2 text-style-7 text-italic white">+90 (312) <mark class="animated-underline secondary typed-text"></mark></span>   
-                <span class="text-2 text-style-7 text-italic white">İNFO@BAYBURTGRUP.COM.TR </span>    
+                <span class="text-2 text-style-7 text-italic white">info@bayburtgrup.com.tr</span>    
               </h1>
               <!-- Srings -->
               <div id="typed-strings">
@@ -952,8 +965,8 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="mailto:İNFO@BAYBURTGRUP.COM.TR" class="nav-link has-icon"> 
-                      <span class="text">İNFO@BAYBURTGRUP.COM.TR</span>
+                    <a href="mailto:info@bayburtgrup.com.tr" class="nav-link has-icon"> 
+                      <span class="text">info@bayburtgrup.com.tr</span>
                     </a>
                   </li>
                 </ul>
