updated contact button and text

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="assets/css/vendor/bricklayer.min.css" />
     <link rel="stylesheet" href="assets/css/vendor/lightbox.min.css" />
     <link rel="stylesheet" href="assets/css/vendor/aos.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   
     <!-- Main CSS -->
     <link rel="stylesheet" href="assets/css/theme.css" />
@@ -943,15 +944,6 @@
                     </a>
                   </li>
                 </ul>
-              </div>
-              <div class="footer-item">
-                <!-- Button -->
-                <a href="#your-link" class="button outline gray primary-hover">
-                  <span class="hover-rotate">
-                    <span class="button-text white white-hover">Get in Touch</span>
-                    <i class="fa-solid fa-arrow-right button-icon white white-hover"></i>
-                  </span>
-                </a>
               </div>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
