add company group links

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                   </div>
                 </div>
                 <!-- Link -->
-                <a href="#your-link" class="full-link">
+                <a href="https://bayburtinsaat.com/" class="full-link" target="_blank">
                   <div class="overlay gray-25 magnetic-effect"></div>
                 </a>
               </div>
@@ -250,7 +250,7 @@
                   </div>
                 </div>
                 <!-- Link -->
-                <a href="#your-link" class="full-link">
+                <a href="https://www.ozguninsaat.com/" class="full-link" target="_blank">
                   <div class="overlay gray-25 magnetic-effect"></div>
                 </a>
               </div>
@@ -275,7 +275,7 @@
                   </div>
                 </div>
                 <!-- Link -->
-                <a href="#your-link" class="full-link">
+                <a href="https://www.bayburtgrup.com.tr/" class="full-link" target="_blank">
                   <div class="overlay gray-25 magnetic-effect"></div>
                 </a>
               </div>
@@ -300,7 +300,7 @@
                   </div>
                 </div>
                 <!-- Link -->
-                <a href="#your-link" class="full-link">
+                <a href="https://www.senbay.com.tr/" class="full-link" target="_blank">
                   <div class="overlay gray-25 magnetic-effect"></div>
                 </a>
               </div>
@@ -325,7 +325,7 @@
                   </div>
                 </div>
                 <!-- Link -->
-                <a href="#your-link" class="full-link">
+                <a href="https://www.agrobay.com/" class="full-link" target="_blank">
                   <div class="overlay gray-25 magnetic-effect"></div>
                 </a>
               </div>
@@ -375,7 +375,7 @@
                   </div>
                 </div>
                 <!-- Link -->
-                <a href="#your-link" class="full-link">
+                <a href="https://www.turkelisera.com.tr/" class="full-link" target="_blank">
                   <div class="overlay gray-25 magnetic-effect"></div>
                 </a>
               </div>
@@ -425,7 +425,7 @@
                   </div>
                 </div>
                 <!-- Link -->
-                <a href="#your-link" class="full-link">
+                <a href="https://www.ankabay.com/" class="full-link" target="_blank">
                   <div class="overlay gray-25 magnetic-effect"></div>
                 </a>
               </div>
@@ -450,7 +450,7 @@
                   </div>
                 </div>
                 <!-- Link -->
-                <a href="#your-link" class="full-link">
+                <a href="https://bayburtenerji.com/" class="full-link" target="_blank">
                   <div class="overlay gray-25 magnetic-effect"></div>
                 </a>
               </div>
@@ -475,7 +475,7 @@
                   </div>
                 </div>
                 <!-- Link -->
-                <a href="#your-link" class="full-link">
+                <a href="https://bayburtbeton.com.tr/" class="full-link" target="_blank">
                   <div class="overlay gray-25 magnetic-effect"></div>
                 </a>
               </div>
@@ -500,7 +500,7 @@
                   </div>
                 </div>
                 <!-- Link -->
-                <a href="#your-link" class="full-link">
+                <a href="https://www.senbaypetrol.com/" class="full-link" target="_blank">
                   <div class="overlay gray-25 magnetic-effect"></div>
                 </a>
               </div>
